Fixed overlaping hero img with navbar

--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -4,7 +4,7 @@
 
 .heroContainer {
   //Has container class from globals
-  padding-top: 10rem;
+  padding-top: 13rem;
   font-family: $regular-font;
 
   @include tablet {
@@ -17,7 +17,7 @@
     }
   }
   @include mobile {
-    padding-top: 3rem;
+    padding-top: 10rem;
   }
 }
 
